--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,20 @@
+*.class
+*.log
+
+# sbt specific
 .cache
-.classpath
-.project
-.settings/
-bin/
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+
+# Intellij specific
+.idea/
